// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create_function_c.sql > line 1 1`] = `[Error: syntax error at or near "\\"]`;

exports[`create_function_c.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "test1",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "c",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 74,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "nosuchfile",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 89,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 57,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 70,
            "names": [
              {
                "String": {
                  "sval": "pg_catalog",
                },
              },
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_function_c.sql > line 25 1`] = `[Error: syntax error at or near "\\"]`;

exports[`create_function_c.sql > line 31 1`] = `[Error: syntax error at or near "\\"]`;

exports[`create_function_c.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "test1",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "internal",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 42,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "nosuch",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 64,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 25,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 38,
            "names": [
              {
                "String": {
                  "sval": "pg_catalog",
                },
              },
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
